--- a/chapter2.tex
+++ b/chapter2.tex
@@ -40,10 +40,10 @@ KH Coderのデメリットとして，
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーとクライエントの1対1の会話の流れの可視化という観点では，ビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
 
 
-Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，カウンセラーおよびクライエントのそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし今回は，カウンセラーの質問とそれに対するクライエントの回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれカウンセラーとクライエントの発言についてグラフを並べるのは不適当だと考えた．
+Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，カウンセラーおよびクライエントのそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，カウンセラーの質問とそれに対するクライエントの回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれカウンセラーとクライエントの発言についてグラフを並べるのは不適当だと考えた．
 
 %軸より上に現れている1つのモデルの話題と下記のように見えている他のモデルの話題で，2つのモデルからの話題密度は，横時間軸に沿って計画される．
 
@@ -66,7 +66,7 @@ Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非
 
 
 
-伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や45.2節で後述する通りクライエントの発言に関する情報は時系列・文のグループ・文の数の3次元データ，カウンセラーの発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分可視化できると考えた．
+伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や5.2節で後述する通りクライエントの発言に関する情報は時系列・文のグループ・文の数の3次元データ，カウンセラーの発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分会話の流れを可視化できると考えた．
 
 
 
