--- a/chapter4.tex
+++ b/chapter4.tex
@@ -17,24 +17,24 @@
    \label{fig:systemtsukaikata}
  \end{figure}
 
-д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
-╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
+%д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
+%╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
+%ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
-╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д▐д┐д╧ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
-jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д▐д┐д╧епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
-\subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
-┐▐\ref{fig:systemtsukaikata}д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
+%jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д▐д┐д╧епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
+
+%\subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
+%┐▐\ref{fig:systemtsukaikata}д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
 %▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╣ч╖╫д╦┬╨д╖д╞
 
-\subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
+%\subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
 
-Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бе
+%Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бе
 
 
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд▐д┐д╧╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
+%└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд▐д┐д╧╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
 ╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}%бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}
 д╦╝ид╣бе
  \begin{figure}
@@ -264,8 +264,34 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-4.1└сд╟└т╠└д╖д┐е╫еэе╚е┐еде╫дЄбд2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞12╠╛д╬└ь╠ч▓╚д╦╕лд╞ддд┐д└днбде│есеєе╚дЄ╞└д┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
+4.1└сд╟└т╠└д╖д┐е╫еэе╚е┐еде╫дЄ
+%бд2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞12╠╛д╬
+└ь╠ч▓╚д╦╕лд╞ддд┐д└днбде│есеєе╚дЄ╞└д┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
 \begin{itemize}
+
+
+
+\item ╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д▐д┐д╧ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
+
+
+
+
+епещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды╩м╬рд╦┤╪д╖д╞д╧бд1╚п╕└├▒░╠д╟д╧д╩дп1╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
+д┐д╚дид╨бдб╪джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бе
+д╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дм
+дщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜
+джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╦д─ддд╞бд└ь╠ч▓╚д╧╝бд╬─╠дъд╦╩м╬рд╣дыбе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
+┬ш2╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╦╩м╬рд╣дыбе
+
+
+
+\item ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
+
+д▐д║ележеєе╗ещб╝д╬╚п╕└дтбд╝б╛╧д╟╜╥д┘ды╜щ┤№╩м╬рд╧┼м┼Ўд╟д╧д╩ддд│д╚дмдвдыд╬д╟бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚дддже│есеєе╚дЄ╞└д┐бе
+д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓╠╡┬╠╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
+епещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды╩м╬рд╚д╧░█д╩дъбдележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣ды╩м╬рд╧1╩╕├▒░╠д╟д╧д╩дп1╚п╕└├▒░╠д╟д╬╩м╬рд╟дшддд╚дддже│есеєе╚дЄ╞└д┐бе
+
+
 
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐дыд┘днд╟двдыбе
@@ -288,7 +314,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\item %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣е│есеєе╚дЄ╞└д┐бе
+%\item %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣е│есеєе╚дЄ╞└д┐бе
 %б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
 %░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
 %д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
@@ -302,11 +328,9 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╟д╣бе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
 %┬шг▓╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╟д╣б╫
 %░╩╛хдлдщбд
-├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
+%├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
-\item %ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
-д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚дддже│есеєе╚дЄ╞└д┐бе
-д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
+
 
 
 \item 
