--- a/chapter5.tex
+++ b/chapter5.tex
@@ -14,79 +14,54 @@
 
 
 
-\section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
-
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе┴░╛╧д╬е╫еэе╚е┐еде╫д╚╦▄╛╧д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞бд▓╝╡нд╦╜╥д┘ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
-╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴дЄ╗╚═╤д╖д┐бе═╤ддд┐╗ё╬┴д╬╗Ў╬у╕б╞д▓ёд╬╞№╔╒д╧2014╟п11╖ю11╞№бд2015╟п1╖ю24╞№бд╞▒╟п3╖ю28╞№бд╞▒╟п10╖ю17╞№бд╞▒╟п11╖ю28╞№д╬дтд╬дЄ╗╚═╤д╖д┐бе
-╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№дкдшд╙╞▒╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
-
-
-\begin{itemize}
-\item 2014╟п9╖ю11╞№ележеєе╗еъеєе░б╩2014╟п11╖ю11╞№╗Ў╬у╕б╞д▓ё╗ё╬┴дшдъб╦
-\item 2014╟п11╖ю19╞№ележеєе╗еъеєе░б╩2015╟п1╖ю24╞№╗Ў╬у╕б╞д▓ё╗ё╬┴дшдъб╦
-\item 2014╟п1╖ю29╞№ележеєе╗еъеєе░б╩2015╟п3╖ю28╞№╗Ў╬у╕б╞д▓ё╗ё╬┴дшдъб╦
-\item X╟п8╖ю10╞№ележеєе╗еъеєе░б╩2015╟п10╖ю17╞№╗Ў╬у╕б╞д▓ё╗ё╬┴дшдъб╦
-\item X╟п10╖ю1╞№ележеєе╗еъеєе░б╩╞▒╛хб╦
-\item X╟п10╖ю30╞№ележеєе╗еъеєе░б╩2015╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё╗ё╬┴дшдъб╦
-\end{itemize}
-2014╟п9╖ю11╞№д╦д─ддд╞д╧епещедеиеєе╚A,Bд╬2╠╛дмддд┐д╬д╟бдд│д╬╞№д╬е╟б╝е┐д╦д─ддд╞д╧д╡дщд╦епещедеиеєе╚д┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бед▐д┐д│д╬епещедеиеєе╚Aд╧2014╟п1╖ю29╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кбдепещедеиеєе╚Bд╧2014╟п11╖ю19╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кд╟двдыбе░╩╣▀бд╦▄╧└╩╕д╦дкддд╞дтд│д╬2╠╛д╬епещедеиеєе╚дЄ╜чд╦епещедеиеєе╚A,Bд╚╕╞д╓бе
-░ь╩¤бдX╟п8╖ю10╞№бдX╟п10╖ю1╞№бдX╟п10╖ю30╞№д╟д╧╞▒░ьд╬░ь╠╛д╬епещедеиеєе╚дм┬╨╛▌д╚д╡дьд╞ддд┐бе┬╨╛▌е╟б╝е┐╞тд╟д╧б╓епещедеиеєе╚Aб╫д╚╕╞д╨дьд╞дддыдмбд┴░╜╥д╬епещедеиеєе╚Aд╚д╧╞▒░ь┐═╩кд╟д╧д╩ддд┐дсбд░╩╣▀бд╦▄╧└╩╕├цд╦дкддд╞д╧епещедеиеєе╚Cд╚╕╞д╓д│д╚д╦д╣дыбе
-
-д│д│д╟2014╟п9╖ю11╞№бд2014╟п11╖ю19╞№бд2014╟п1╖ю29╞№д╦дкддд╞д╧ешб╝емд╬т╘┴█┴░д╚ешб╝емд╬т╘┴█╕хд╬е╞ене╣е╚е╟б╝е┐дм┬╕║▀д╖д┐д╬д╟бдт╘┴█┴░╕хд╟╩мд▒д┐е╞ене╣е╚е╟б╝е┐дт═╤░╒д╖д┐бед─д▐дъ
-\begin{itemize}
-\item 2014╟п9╖ю11╞№епещедеиеєе╚A
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█┴░
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█╕х
-\item 2014╟п9╖ю11╞№епещедеиеєе╚B
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█┴░
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█╕х
-\item 2014╟п11╖ю19╞№епещедеиеєе╚B
-\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█┴░
-\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█╕х
-\item 2014╟п1╖ю29╞№епещедеиеєе╚A
-\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█┴░
-\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█╕х
-\item X╟п8╖ю10╞№епещедеиеєе╚C
-\item X╟п10╖ю1╞№епещедеиеєе╚C
-\item X╟п10╖ю30╞№епещедеиеєе╚C
-\end{itemize}
-д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
-
-д╡дщд╦д│д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
-░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе%[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
 \section{евеые┤еъе║ер}
 
 
-╝бд╦бд┴░е╗епе╖ечеєд╟╜╥д┘д┐╞■╬╧е╟б╝е┐дЄ═╤ддд┐бд╦▄─є░╞е╖е╣е╞ерд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
+╦▄─є░╞е╖е╣е╞ерд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
 д╩дкбд╦▄─є░╞е╖е╣е╞ерд╬│л╚п╕└╕ьд╧JavaScriptд╟двдыбе
-д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
-╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед│д╬▓─╗ы▓╜д╬║▌д╦бде╟б╝е┐д╬▓─╗ы▓╜дфе╟б╝е┐д╦┤Ёд┼ддд╞е╔енехесеєе╚дЄ┴р║юд╣дыд┐дсд╦╗╚═╤д╡дьд╞дддыJavaScriptещеде╓ещеъд╟двдыD3.js\cite{bostock2012d3}дЄ╗╚═╤д╖д┐бе
-
-╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д▐д┐д╧ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
-
-jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д▐д┐д╧епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
-
-\subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
-┐▐\ref{fig:ver160203}д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
-▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╬▀╖╫д╬╩╕╗·┐ЇдЄ▓г╝┤бдд─д▐дъ╗■┤╓╝┤д╚д╖д┐бе╕х╜╥д╣дыележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└д╧д│д╬╗■┤╓╝┤д╦д╜д├д╞╜╨╕╜д╣дыбеележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╬╞■дь┬╪дядъдмдядлдъдфд╣дддшджд╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дмепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄд┴дчджд╔╔╜д╖д╞дддыд╬д╧╩╪╡╣╛х╚п╕└╔Ї╩мд╬├ц▒√╔Ї╩мд╦д╩д├д╞дддыбе
-╜─╝┤д╧╚п╕└├цд╬1╩╕д╬┐Їд╬джд┴бдд╔д╬е░еыб╝е╫д╦▓┐╩╕╞■д├д╞дддыдлд╚дддж╩╕д╬┐ЇдЄ╔╜д╖д╞дддыбе
-
-д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬епещедеиеєе╚д╬╚п╕└д╬│╞1╩╕д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бд╦д─ддд╞└т╠└д╣дыбе
-д▐д║бддвдщдлд╕дсд│д┴дщд╟б╓д│дьдЄ┤▐др╩╕д╧д│д╬е░еыб╝е╫д╦┬░д╣дыд└дэджб╫д╚дддж├▒╕ьдЄбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д┤д╚д╦╗╪─ъд╖д╞дкдпбе
-╝бд╦бд│╞├▒╕ь╖▓дЄ┤▐дрепещедеиеєе╚д╬╚п╕└д╬1╩╕дЄе░еыб╝е╫╩мд▒дЄд╖д╞ддд├д┐бе
-║г▓єд╧┤╩├▒▓╜д╬д┐дсбд╩г┐Їд╬е░еыб╝е╫д╬▓─╟╜└ндЄдтд─1╩╕д╦┬╨д╖д╞д╧бдб╓░жб╫д╬▓─╟╜└ндмдвдьд╨б╓░жб╫д╦бдд╜дь░╩│░д╧б╓╗┼╗Ўб╫д╦╩м╬рд╣дыдшджд╦д╖д┐бе
-
-
-
-\subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
-
-Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бед│джд╣дыд│д╚д╦дшд├д╞бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╔┴▓шд╡дьдыд╬д╟бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└д╬┤╪╧в└ндмдядлдъдфд╣дпд╩д├д┐бе
+╦▄─є░╞е╖е╣е╞ерд╬е╖е╣е╞ер╣╜└о┐▐дЄ┐▐\ref{fig:systemkousei}д╦бд╜ш═¤е╒еэб╝дЄ┐▐\ref{fig:shoriflow}д╦╝ид╣бе
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{systemkousei.png}
+   \end{center}
+   \caption{─є░╞е╖е╣е╞ерд╬е╖е╣е╞ер╣╜└о┐▐}
+   \label{fig:systemkousei}
+%\end{landscape}
+ \end{figure}
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{shoriflow.png}
+   \end{center}
+   \caption{─є░╞е╖е╣е╞ерд╬╜ш═¤е╒еэб╝}
+   \label{fig:shoriflow}
+%\end{landscape}
+ \end{figure}
 
 
-└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞ддды╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╝┴╠ф╞т═╞д╬╖┴┬╓д╧═╫╖я─╠дъ5╝я╬рд╟двдъбд╜─╦└д╬┐зд╬┬╨▒■дЄ┤▐дс░╩▓╝д╬─╠дъд╟двдыбе
+д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбеjsonе╒ебедеы╞╔д▀╣■д▀┴░д╬╦▄─є░╞е╖е╣е╞ере╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:yomikomimae2}д╦╝ид╣бе
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth,angle=90]{yomikomimae2.png}
+   \end{center}
+   \caption{jsonе╒ебедеы╞╔д▀╣■д▀┴░д╬е╖е╣е╞ере╣епеъб╝еєе╖ече├е╚}
+   \label{fig:yomikomimae2}
+%\end{landscape}
+ \end{figure}
+
+┐▐\ref{fig:systemkousei}д╬wordparse.jsд╦д╞╣╘дж╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
+ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖1╚п╕└дкдшд╙1╩╕д╦╩╕╛╧дЄ╩мд▒д┐бе┐▐\ref{fig:systemkousei}д╬wordparse.jsд╟д╧┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д▐д┐д╧епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
+
+д▐д┐бд┐▐\ref{fig:systemkousei}д╬wordparse.jsд╦д╞б╓епещедеиеєе╚д╬╚п╕└д╦дкддд╞д│дьдЄ┤▐др╩╕д╧д│д╬е░еыб╝е╫д╦┬░д╣дыд└дэджб╫д╚дддж├▒╕ьдЄбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д┤д╚д╦╗╪─ъд╖д╞дкднбдд╔д╬╩╕дмд╔д╬е░еыб╝е╫д╬├▒╕ьдЄдтд─длд╚дддж╛Ё╩єдЄбд┐▐\ref{fig:systemkousei}д╬select.jsд╦░·дн┼╧д╖бв╕х╜╥д╣дыеще╕еке▄е┐еєд╟д╬╜щ┤№┴к┬Єд╚д╣дыбе
+д│д╬╜щ┤№┴к┬Єд╦дкддд╞бд║г▓єд╧┤╩├▒▓╜д╬д┐дсбд╩г┐Їд╬е░еыб╝е╫д╬▓─╟╜└ндЄдтд─1╩╕д╦┬╨д╖д╞д╧бдб╓░жб╫д╬▓─╟╜└ндмдвдьд╨б╓░жб╫д╦бдд╜дь░╩│░д╧б╓╗┼╗Ўб╫д╦╩м╬рд╣дыдшджд╦д╖д┐бе
+
+
+
+╞▒══д╦╝┴╠ф╞т═╞д╬╖┴┬╓д╧┴░╛╧д╬═╫╖я─╠дъ5╝я╬рд╟двдъбд╕х╜╥д╣ды╜─╦└╔┴▓шд╬┐зд╬┬╨▒■дЄ┤▐дс░╩▓╝д╬─╠дъд╟двдыбе
 \begin{itemize}
 \item ╟╗дде╘еєеп┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫
 \item ╟╗дд└─┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫
@@ -96,7 +71,8 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \end{itemize}
 дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
 
-д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬ележеєе╗ещб╝д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бдЄ┤╩├▒д╦┐▐\ref{fig:5_2}д╦╝ид╣бе
+
+епещедеиеєе╚д╬╚п╕└д╬1╩╕д┤д╚д╬╩м╬рд╚╞▒══д╦бд┐▐\ref{fig:systemkousei}д╬wordparse.jsд╦д╞бдележеєе╗ещб╝д╬1╚п╕└д╬╩м╬р╜щ┤№┴к┬Є╛ї┬╓д╬╛Ё╩єдЄд─дпдъбдselect.jsд╦░·дн┼╧д╣бед│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬ележеєе╗ещб╝д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бдЄ┤╩├▒д╦┐▐\ref{fig:5_2}д╦╝ид╣бе
  \begin{figure}
 %\begin{landscape}
    \begin{center}
@@ -107,9 +83,35 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %\end{landscape}
  \end{figure}
 
-
 д▐д║б╓ддд─б╫б╓д╔д│б╫б╓▓┐б╫д╩д╔д╬дддядцды5W1HдЄ╝ид╣╡┐╠ф╗ьдЄдтд─╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе╝бд╦╗─дъд╬╚п╕└д╬джд┴бд├▒╕ь┐Їдмг╡╕─░╩▓╝д╬дтд╬дЄб╓┴ъ─╚б╫д╦╩м╬рд╣дыбед╡дщд╦╗─дъд╬╚п╕└д╬джд┴╜к╜ї╗ьб╓длб╫дЄ┤▐др╚п╕└дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе║гд▐д╟д╬г│д─д╦╩м╬рд╡дьд╩длд├д┐дтд╬д╧б╓▓Є╝сб╫длб╓└д┤╓╧├б╫д╦╩м╬рд╡дьдыдяд▒д└дмбд╜к╜ї╗ьд╬б╓д═б╫дЄ┤▐дрдтд╬дЄб╓▓Є╝сб╫бд┤▐д▐д╩дддтд╬дЄб╓└д┤╓╧├б╫д╚д╖д┐бе
 
+
+
+
+%ележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╩м╬рдЄ╣╘джбед│д╬╩м╬р╩¤╦бд╦д─ддд╞д╧╦▄└с╞тд╟╕х╜╥д╣дыбе
+д╜д╬╕хбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╣дыбее░еще╒д╬▓─╗ы▓╜д╬║▌д╦бде╟б╝е┐д╬▓─╗ы▓╜дфе╟б╝е┐д╦┤Ёд┼ддд╞е╔енехесеєе╚дЄ┴р║юд╣дыд┐дсд╦╗╚═╤д╡дьд╞дддыJavaScriptещеде╓ещеъд╟двдыD3.js\cite{bostock2012d3}дЄ╗╚═╤д╖д┐бе
+
+
+jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе
+
+\subsubsection{епещедеиеєе╚д╬╚п╕└д╬╔┴▓ш}
+┐▐\ref{fig:ver160203}д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
+▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╬▀╖╫д╬╩╕╗·┐ЇдЄ▓г╝┤бдд─д▐дъ╗■┤╓╝┤д╚д╖д┐бе╕х╜╥д╣дыележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└д╧д│д╬╗■┤╓╝┤д╦д╜д├д╞╜╨╕╜д╣дыбеележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╬╞■дь┬╪дядъдмдядлдъдфд╣дддшджд╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дмепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄд┴дчджд╔╔╜д╖д╞дддыд╬д╧╩╪╡╣╛х╚п╕└╔Ї╩мд╬├ц▒√╔Ї╩мд╦д╩д├д╞дддыбе
+╜─╝┤д╧╚п╕└├цд╬1╩╕д╬┐Їд╬джд┴бдд╔д╬е░еыб╝е╫д╦▓┐╩╕╞■д├д╞дддыдлд╚дддж╩╕д╬┐ЇдЄ╔╜д╖д╞дддыбе
+
+д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬епещедеиеєе╚д╬╚п╕└д╬│╞1╩╕д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бд╦д─ддд╞└т╠└д╣дыбе
+д▐д║бддвдщдлд╕дсд│д┴дщд╟
+%╝бд╦бд│╞├▒╕ь╖▓дЄ┤▐дрепещедеиеєе╚д╬╚п╕└д╬1╩╕дЄе░еыб╝е╫╩мд▒дЄд╖д╞ддд├д┐бе
+
+
+
+
+\subsubsection{ележеєе╗ещб╝д╬╚п╕└д╬╔┴▓ш}
+
+Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бед│джд╣дыд│д╚д╦дшд├д╞бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╔┴▓шд╡дьдыд╬д╟бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└д╬┤╪╧в└ндмдядлдъдфд╣дпд╩д├д┐бе
+
+
+└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞ддды╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе
 
 
 \subsubsection{╕╢╩╕╔╜╝и╡б╟╜}
