--- a/chapter6.tex
+++ b/chapter6.tex
@@ -6,6 +6,68 @@
 
 
 
+\section{入力データの前処理}
+
+
+まず本提案システム評価で使用する入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，入力データは共通して，下記に述べる全16個のデータを使用した．
+本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
+後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
+
+
+\begin{itemize}
+\item 2014年9月11日カウンセリング（2014年11月11日事例検討会資料より）
+\item 2014年11月19日カウンセリング（2015年1月24日事例検討会資料より）
+\item 2014年1月29日カウンセリング（2015年3月28日事例検討会資料より）
+\item X年8月10日カウンセリング（2015年10月17日事例検討会資料より）
+\item X年10月1日カウンセリング（同上）
+\item X年10月30日カウンセリング（2015年11月28日事例検討会資料より）
+\end{itemize}
+2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
+一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
+
+ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．つまり
+\begin{itemize}
+\item 2014年9月11日クライエントA
+\item 2014年9月11日クライエントA瞑想前
+\item 2014年9月11日クライエントA瞑想後
+\item 2014年9月11日クライエントB
+\item 2014年9月11日クライエントB瞑想前
+\item 2014年9月11日クライエントB瞑想後
+\item 2014年11月19日クライエントB
+\item 2014年11月19日クライエントB瞑想前
+\item 2014年11月19日クライエントB瞑想後
+\item 2014年1月29日クライエントA
+\item 2014年1月29日クライエントA瞑想前
+\item 2014年1月29日クライエントA瞑想後
+\item X年8月10日クライエントC
+\item X年10月1日クライエントC
+\item X年10月30日クライエントC
+\end{itemize}
+の計15個のテキストデータを用意した．
+
+さらにこの提案システムにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
+以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
+
+
+
+\section{システムの動作結果}
+
+
+前節で述べたデータをそれそれ本システムに入力した際の動作結果について，特筆すべき点をまとめる．
+
+
+
+\begin{enumerate}
+  \item 模擬データの出力結果を
+  \item 前節で述べたローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間である．
+\end{enumerate}
+
+
+
+
+
+
+\section{エキスパートレビュー}
 
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，
 
@@ -23,10 +85,16 @@
 
 
 
-また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には？？という点である「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
-ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
-特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
-がつきにくくなりました．」などのコメントをいただいている．
+また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には
+
+\begin{enumerate}
+  \item モニターのブルーライトカットの影響で特に黄色の文字が見えない．黄色と灰色は，バックの白とかぶって見えにくくなっている
+  \item 青色の【】は黒字と判別がつきにくい
+\end{enumerate}
+
+
+
+という点である．
 
 
 
