--- a/chapter8.tex
+++ b/chapter8.tex
@@ -1,6 +1,6 @@
 \section{結論}
 
-本研究では，時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化するWebシステムを開発した．ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それがベテランのカウンセラーにとってすぐにわかるようになったことが，本研究にて実現されたことである．
+本研究では，時間軸に沿った可視化によって，クライエントとカウンセラーの会話の流れを可視化するWebシステムを開発した．ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが重要である．それがベテランのカウンセラーにとってすぐにわかるようになったことが，本研究にて実現されたことである．
 
 
 %本提案システムのユーザーとして想定しているベテランのカウンセラーからは「この研究が進んでいくことによって，心理臨床におけるスーパーヴィジョンにおいて，客観性にもとづく指導が可能になって
@@ -13,7 +13,7 @@
 
 本研究で得られた結論を踏まえて，今後検討するべき課題を以下にまとめる．
 \begin{itemize}
-\item そもそも積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
+\item そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
 クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 \item 本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸に関して，たとえば「交友」の場合
 \begin{enumerate}
@@ -28,7 +28,7 @@
 \item ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要性があると考えられる．
 \item 本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームのJSONファイルにつくりなおしてから，本提案システムのユーザーであるベテランのカウンセラーにそのJSONファイルを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなるJSONファイルに変換する機能を搭載する必要性もあると考える．
 \item 本システムのユーザーのカウンセラーに，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとのことであったので，搭載する予定である．
-\item 本提案システムについてまだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，意味差別法\cite{attrakdiff}などによる定量的評価が必要であると考える．
+\item ユーザーから見た本提案システムの使い勝手について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くのベテランカウンセラーに使っていただき，意味差別法\cite{attrakdiff}などによる定量的評価が必要であると考える．
 \end{itemize}
 
 
