--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \input{chapter1.tex}
 \chapter{関連研究}
 \input{chapter2.tex}
-\chapter{ヨーガセラピーについて}
+\chapter{カウンセリングについて}
 \input{chapter3.tex}
 \chapter{システム要件の抽出}
 \input{chapter4.tex}
