--- a/chapter6.tex
+++ b/chapter6.tex
@@ -25,28 +25,28 @@
 2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
 一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
 
-ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．つまり
-\begin{itemize}
-\item 2014年9月11日クライエントA
-\item 2014年9月11日クライエントA瞑想前
-\item 2014年9月11日クライエントA瞑想後
-\item 2014年9月11日クライエントB
-\item 2014年9月11日クライエントB瞑想前
-\item 2014年9月11日クライエントB瞑想後
-\item 2014年11月19日クライエントB
-\item 2014年11月19日クライエントB瞑想前
-\item 2014年11月19日クライエントB瞑想後
-\item 2014年1月29日クライエントA
-\item 2014年1月29日クライエントA瞑想前
-\item 2014年1月29日クライエントA瞑想後
-\item X年8月10日クライエントC
-\item X年10月1日クライエントC
-\item X年10月30日クライエントC
-\end{itemize}
-の計15個のテキストデータを用意した．
-
+ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．%つまり
+%\begin{itemize}
+%\item 2014年9月11日クライエントA
+%\item 2014年9月11日クライエントA瞑想前
+%\item 2014年9月11日クライエントA瞑想後
+%\item 2014年9月11日クライエントB
+%\item 2014年9月11日クライエントB瞑想前
+%\item 2014年9月11日クライエントB瞑想後
+%\item 2014年11月19日クライエントB
+%\item 2014年11月19日クライエントB瞑想前
+%\item 2014年11月19日クライエントB瞑想後
+%\item 2014年1月29日クライエントA
+%\item 2014年1月29日クライエントA瞑想前
+%\item 2014年1月29日クライエントA瞑想後
+%\item X年8月10日クライエントC
+%\item X年10月1日クライエントC
+%\item X年10月30日クライエントC
+%\end{itemize}
+%よってテキストデータは計15個になった．
 さらにこの提案システムにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
-以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
+以上%，16個のカウンセリング
+の文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 
 
@@ -58,8 +58,32 @@
 
 
 \begin{enumerate}
-  \item 模擬データの出力結果を
-  \item 前節で述べたローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間である．
+  \item 模擬データを入力した際の出力結果を図\ref{fig:mogi_shutsuryoku}に示す．この動作結果は作成者の意図した通りの動作であることを確認した．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth,angle=90]{mogi_shutsuryoku.png}
+   \end{center}
+   \caption{模擬データ入力時の出力結果}
+   \label{fig:mogi_shutsuryoku}
+%\end{landscape}
+ \end{figure}
+  \item 2014年11月19日クライエントB瞑想前のデータを入力した際の出力結果を図\ref{fig:141119bmae}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth,angle=90]{141119bmae.png}
+   \end{center}
+   \caption{2014年11月19日クライエントB瞑想前データ入力時の出力結果}
+   \label{fig:141119bmae}
+%\end{landscape}
+ \end{figure}
+\begin{enumerate}
+  \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相づち→1000文字程度，「愛」10文
+  \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
+\end{enumerate}
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相づちかもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+  \item 前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
 \end{enumerate}
 
 
@@ -69,9 +93,9 @@
 
 \section{エキスパートレビュー}
 
-まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，
+6.1節で述べたデータをカウンセラー1名に渡し，Web上から本提案システムを利用していただき、主に本システムの使い勝手についてコメントを得た．
 
-長い文章を入力した際に，その日
+まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，長い文章を入力した際に，その日
 だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントをいただいている．
 
 
@@ -86,14 +110,10 @@
 
 
 また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には
-
 \begin{enumerate}
   \item モニターのブルーライトカットの影響で特に黄色の文字が見えない．黄色と灰色は，バックの白とかぶって見えにくくなっている
   \item 青色の【】は黒字と判別がつきにくい
 \end{enumerate}
-
-
-
 という点である．
 
 
