--- a/chapter7.tex
+++ b/chapter7.tex
@@ -4,7 +4,7 @@
 
 
 
-以上の結果から，
+まず，6.2節で述べた結果から，
 最長データで4000文字以上の会話の流れの文章を文字で読んで読解するより，ひと目で早く会話の流れを理解できると考える．
 したがって，会話の流れがベテランのカウンセラーにとってすぐにわかるようになることが，本研究の目的を達成したと考える．
 
