--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,3 +1,5 @@
+本章では，関連する先行研究と本研究との位置づけについて述べる．
+
 \section{テキストマイニング}
 
 
@@ -13,16 +15,7 @@ KH Coder\cite{kh1}とは，テキスト文章型のデータを統計分析するためのフリーのソフト
 %KH Coderは，統計計算とグラフィックスのための環境「R」を内部で解析に利用している．KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり，どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である．
 KH Coderは改行によって段落を認識し，句点によって文を認識する．よってひと段落または一文を集計単位として設定することが可能になっている\cite{manu}．
 
-KH Coderのデメリットとして，
-\begin{itemize}
-\item 共起マップ描画とクラスタリングが同時に進行できない
-\item 共起集計単位が「1文」か「1段落」しか選べない
-\item 因果関係解析によく用いられる係り受け解析ができない
-\end{itemize}
-
-
-
-といったことがあげられる．
+KH Coderのデメリットとして，時系列に沿った可視化ができないことがあげられる．本論文では会話の流れを取り扱うので，時系列に沿った可視化が求められると考える．
 
 
 
