--- a/chapter4.tex
+++ b/chapter4.tex
@@ -111,7 +111,7 @@
 %\subsubsection{インタラクティブ性}
 %また，提案システム1においてはインタラクティブ性がなかった．各単語をクライエントの話題の分野ごとにわけるラジオボタンについて，提案システム1ではその場でラジオボタンの選択を変えただけではグラフにその選択の変更が反映されず，１回１回ブラウザ上でページをリロードして，カウンセリングの文字起こしテキストデータのjsonファイルも読み込み直す必要が生じていた．
 
-%しかし提案システム2では，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化するように改善した．また，クライエントの話題の分野を各単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
+%しかし提案システム2では，ブラウザ上でページをリロードしなくも，ラジオボタンの選択を変えることでシームレスにグラフが変化するように改善した．また，クライエントの話題の分野を単語ごとに決め打ちしたものだけでなく，決め打ちしていないものに関しても選択肢を表示し選択できるようにした．
 
 
 %\subsubsection{「開かれた質問」・「閉じられた質問」・「その他」}
@@ -256,7 +256,7 @@
 
 %\subsection{文の区切れ目}
 %例えば「ほんとに，朝も昼も見張られてないっていったら変な言い方ですけど，食べた
-%いときに食べれる状況っていうのがすごく久しぶりで，なんか自分でもどうなん
+%いときに食べられる状況っていうのがすごく久しぶりで，なんか自分でもどうなん
 %かなっていうのがあったんですけど，意外と普通にできたみたいな（笑）それは
 %，ありますね・・・なんか愛がいたら食べなきゃいけなかったりとかするし」という文に対して，「・・・」より前の部分は「愛」「交友」「仕事」のどの分類にも属さず，「・・・」より後の部分は「愛」に属するが，プロトタイプバージョンにおいては「・・・」を「．」のような1文1文の区切れ目に設定してないので，区別した判定変更が提案システムユーザー側でできない．
 
