--- a/chapter5.tex
+++ b/chapter5.tex
@@ -65,7 +65,7 @@
 \begin{itemize}
 \item 濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」
 \item 濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」
-\item 紫は「相づち」
+\item 紫は「相槌」
 \item オレンジはクライエントの問題をカウンセラーがどう「解釈」しているかの確認
 \item 黒は「無駄話」
 \end{itemize}
