--- a/chapter6.tex
+++ b/chapter6.tex
@@ -79,10 +79,10 @@
 %\end{landscape}
  \end{figure}
 \begin{enumerate}
-  \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相づち→1000文字程度，「愛」10文
+  \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
 \end{enumerate}
-となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相づちかもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
   \item 前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．
 \end{enumerate}
 
