--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,10 +1,10 @@
 本章では，関連する先行研究と本研究との位置づけについて述べる．
 
-\section{テキストマイニング}
+\section{テキストデータ分析}
 
 
 
-KH Coder\cite{kh1}とは，テキスト文章型のデータを統計分析するためのフリーのソフトウェアである．アンケートの自由記述・インタビュー記録・新聞記事など，さまざまな社会調査データを分析するため，立命館大学の樋口が開発したものである．計量テキスト分析またはテキストマイニングの方法に対応している．杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで，成人看護学概論にプロジェクト学習を採用した効果を明らかにした．
+テキストデータ分析はテキスト要約や単語同士の関係の分析など，様々な目的で行われている．たとえばKH Coder\cite{kh1}は，テキスト文章型のデータを統計分析するためのフリーのソフトウェアである．アンケートの自由記述・インタビュー記録・新聞記事など，さまざまな社会調査データを分析するため，立命館大学の樋口が開発したものである．杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで，成人看護学概論にプロジェクト学習を採用した効果を明らかにした．
 
 
 %以下に，KH Coderの主な可視化システムについて紹介する．
@@ -33,7 +33,7 @@ KH Coderのデメリットとして，時系列に沿った可視化ができないことがあげられる．本論
 
 %%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーとクライエントの1対1の会話の流れの可視化という観点では，ビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで別々に可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーとクライエントの1対1の会話の流れの可視化という観点では，ビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
 
 
 Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，カウンセラーおよびクライエントのそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし，カウンセリングの会話の流れにおいて，カウンセラーの質問とそれに対するクライエントの回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれカウンセラーとクライエントの発言についてグラフを並べるのは不適当だと考えた．
@@ -63,4 +63,4 @@ Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非
 
 
 
-本提案システムとして，カウンセラーからの質問形態と，「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化した．なお，「愛」「仕事」「交友」という単語のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来するものである．それについては次章で詳しく述べる．単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
+本提案システムとして，カウンセラーからの質問形態と，クライエントの発言の各1文のグループの時間経過に沿った分布変化を可視化した．なお，クライエントの発言の各1文のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来する分け方を取り入れた．それについては次章で詳しく述べる．%単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
