--- a/chapter3.tex
+++ b/chapter3.tex
@@ -93,9 +93,7 @@
 
 %クライエントの会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
-%クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
-%クライエントの関心に関心を向けるというのがカウンセリングの基本ですので，このようにカウンセラーの関心でクライエントを誘導してしまうことはよろしくありませんので，そのためのチェックが可能になるものと考える．
 
 %もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上の分類法をもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話の流れを可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまりカウンセラーから得たコメントをもとにした，提案システムに対する要件の抽出について説明する．
+以上の分類法をもとに，本研究では，時間軸に沿った可視化によって，クライエントとカウンセラーの会話の流れを可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまりカウンセラーから得たコメントをもとにした，提案システムに対する要件の抽出について説明する．
