--- a/main.tex
+++ b/main.tex
@@ -48,5 +48,6 @@
 
 %	\bibitem{zokad} 野田俊作，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
 %\end{thebibliography}
+\appendix
 
 \end{document}
