--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,5 +1,3 @@
-
-
 心療において，カウンセラーは心身症やストレスからくる身体症状をもつ患者またはクライエントの治療に一貫としてカウンセリングを行う．しかし，ビギナーのカウンセラーは「対人関係上の問題」を，質問に対する回答として患者またはクライエントから引き出すのに苦戦しているという問題がある．本論文では以降，患者またはクライエントのことをまとめてクライエントと記述する．
 
 カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
@@ -12,7 +10,7 @@
 
 
 
-クライエントの会話内容としては，第3章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
+クライエントの会話内容としては，第3章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．時系列に沿って見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 
 
 本論文の構成は以下のとおりである．第1章では，本論文の序論である．第2章では，本論文の関連研究を挙げる．第3章では，システム開発にあたり必要になってくるヨーガセラピーの競う事項について説明する．第4章では，提案システムのプロトタイプ開発とカウンセラーのフィードバックで最終システムの要件を整理する．第5章では，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどについて重点的に説明する．第6章では，前章で説明した提案システムに対してのカウンセラーによる評価について述べる．第7章ではそれに対する考察を述べる．第8章では本論文の結論と本研究が抱える今後の課題について述べる．
